--- a/geostroy/calculator.html
+++ b/geostroy/calculator.html
@@ -225,7 +225,7 @@
                             <div class="calc__subtitle">2. Выберите обсадную трубу</div>
                             <div class="calc__pipe__box">
                                 <label class="calc__input calc__pipe__input">
-                                    <input type="radio" name="truba" value="Бокситогорский район">
+                                    <input type="radio" name="truba" value="НПВХ труба">
                                     <span>
                                         <span class="calc__input__img"><img src="img/pipe.png" alt="#"></span>
                                         <span class="calc__input__title">НПВХ труба</span>
@@ -234,7 +234,7 @@
                                     </span>
                                 </label>
                                 <label class="calc__input calc__pipe__input">
-                                    <input type="radio" name="truba" value="Бокситогорский район">
+                                    <input type="radio" name="truba" value="НПВХ труба">
                                     <span>
                                         <span class="calc__input__img"><img src="img/pipe.png" alt="#"></span>
                                         <span class="calc__input__title">НПВХ труба</span>
@@ -243,7 +243,7 @@
                                     </span>
                                 </label>
                                 <label class="calc__input calc__pipe__input">
-                                    <input type="radio" name="truba" value="Бокситогорский район">
+                                    <input type="radio" name="truba" value="НПВХ труба">
                                     <span>
                                         <span class="calc__input__img"><img src="img/pipe.png" alt="#"></span>
                                         <span class="calc__input__title">НПВХ труба</span>
@@ -252,7 +252,7 @@
                                     </span>
                                 </label>
                                 <label class="calc__input calc__pipe__input">
-                                    <input type="radio" name="truba" value="Бокситогорский район">
+                                    <input type="radio" name="truba" value="НПВХ труба">
                                     <span>
                                         <span class="calc__input__img"><img src="img/pipe.png" alt="#"></span>
                                         <span class="calc__input__title">НПВХ труба</span>
@@ -266,7 +266,7 @@
                             <div class="calc__subtitle">3. Выберите обустройство скважины</div>
                             <div class="calc__arrangement__box">
                                 <label class="calc__input calc__arrangement__input">
-                                    <input type="radio" name="obustroystvo" value="Бокситогорский район">
+                                    <input type="radio" name="obustroystvo" value="Обустройство с кессоном">
                                     <span>
                                         <span class="calc__input__img"><img src="img/arrangement_1.png" alt="#"></span>
                                         <span class="calc__input__title">Обустройство с кессоном</span>
@@ -274,7 +274,7 @@
                                     </span>
                                 </label>
                                 <label class="calc__input calc__arrangement__input">
-                                    <input type="radio" name="obustroystvo" value="Бокситогорский район">
+                                    <input type="radio" name="obustroystvo" value="Обустройство с кессоном">
                                     <span>
                                         <span class="calc__input__img"><img src="img/arrangement_1.png" alt="#"></span>
                                         <span class="calc__input__title">Обустройство с кессоном</span>
@@ -282,7 +282,7 @@
                                     </span>
                                 </label>
                                 <label class="calc__input calc__arrangement__input">
-                                    <input type="radio" name="obustroystvo" value="Бокситогорский район">
+                                    <input type="radio" name="obustroystvo" value="Обустройство с кессоном">
                                     <span>
                                         <span class="calc__input__img"><img src="img/arrangement_1.png" alt="#"></span>
                                         <span class="calc__input__title">Обустройство с кессоном</span>
@@ -290,7 +290,7 @@
                                     </span>
                                 </label>
                                 <label class="calc__input calc__arrangement__input">
-                                    <input type="radio" name="obustroystvo" value="Бокситогорский район">
+                                    <input type="radio" name="obustroystvo" value="Обустройство с кессоном">
                                     <span>
                                         <span class="calc__input__img"><img src="img/arrangement_1.png" alt="#"></span>
                                         <span class="calc__input__title">Обустройство с кессоном</span>
