--- a/geostroy/service.html
+++ b/geostroy/service.html
@@ -88,7 +88,10 @@
         <section class="service">
             <div class="container">
                 <div class="service__box">
-                    <div class="service__title">Бурение скважин на воду</div>
+                    <div class="service__title">
+                        Бурение скважин на воду
+                        <a href="#" class="btn">Связаться</a>
+                    </div>
                     <div class="service__text">
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer</p>
