--- a/geostroy/contacts.html
+++ b/geostroy/contacts.html
@@ -87,7 +87,10 @@
         </nav>
         <section class="contacts">
             <div class="container">
-                <div class="section__title">Контакты</div>
+                <div class="section__title section__title_btn">
+                    Контакты
+                    <a href="#" class="btn">Связаться</a>
+                </div>
                 <div class="contacts__map">
                     <img src="img/map.png" alt="#">
                 </div>
