--- a/geostroy/reviews.html
+++ b/geostroy/reviews.html
@@ -318,6 +318,7 @@
                         </div>
                     </div>
                 </div>
+                <a href="#" class="btn">Смотреть ещё</a>
             </div>
         </section>
         <section class="action">
