--- a/geostroy/work.html
+++ b/geostroy/work.html
@@ -88,7 +88,7 @@
         <section class="work">
             <div class="container">
                 <div class="work__box">
-                    <div class="work__title">Бурение скважины в поселке Порошкино, всеволожский район</div>
+                    <div class="page__title">Бурение скважины в поселке Порошкино, всеволожский район</div>
                     <div class="work__text">
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
