--- a/geostroy/contacts.html
+++ b/geostroy/contacts.html
@@ -8,7 +8,7 @@
         <title>Контакты</title>
         <link rel="stylesheet" href="css/style.css" type="text/css">
     </head>
-<body class="reviews-page">
+<body class="contacts-page">
     <header class="header">
         <div class="header__top">
             <div class="container">
@@ -87,10 +87,7 @@
         </nav>
         <section class="contacts">
             <div class="container">
-                <div class="section__title section__title_btn">
-                    Контакты
-                    <a href="#" class="btn">Связаться</a>
-                </div>
+                <div class="section__title section__title_btn">Контакты<a href="#" class="btn">Связаться</a></div>
                 <div class="contacts__map">
                     <img src="img/map.png" alt="#">
                 </div>
