--- a/geostroy/index.html
+++ b/geostroy/index.html
@@ -517,7 +517,7 @@
                             <div class="works__subtitle">Lorem Ipsum has been the industry's standard dummy</div>
                         </a>
                     </div>
-                    <a href="#" class="btn">Смотреть ещё</a>
+                    <a href="#" class="btn btn_readmore">Смотреть ещё</a>
                 </div>
             </div>
         </section>
