--- a/geostroy/reviews.html
+++ b/geostroy/reviews.html
@@ -318,7 +318,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="#" class="btn">Смотреть ещё</a>
+                <a href="#" class="btn btn_readmore">Смотреть ещё</a>
             </div>
         </section>
         <section class="action">
