--- a/geostroy/works.html
+++ b/geostroy/works.html
@@ -8,7 +8,7 @@
         <title>Наши работы</title>
         <link rel="stylesheet" href="css/style.css" type="text/css">
     </head>
-<body>
+<body class="works-page">
     <header class="header">
         <div class="header__top">
             <div class="container">
@@ -487,7 +487,7 @@
                             <div class="works__subtitle">Lorem Ipsum has been the industry's standard dummy</div>
                         </a>
                     </div>
-                    <a href="#" class="btn">Смотреть ещё</a>
+                    <a href="#" class="btn btn_readmore">Смотреть ещё</a>
                 </div>
             </div>
         </section>
