--- a/geostroy/work.html
+++ b/geostroy/work.html
@@ -7,6 +7,7 @@
         <link rel="shortcut icon" href="img/favicon.png">
         <title>Бурение скважины в поселке Порошкино, всеволожский район</title>
         <link rel="stylesheet" href="css/style.css" type="text/css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />    
     </head>
 <body class="reviews-page">
     <header class="header">
@@ -94,31 +95,13 @@
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galleyLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
                     </div>
-                    <div class="work__items">
-                        <div class="work__item">
-                            <img src="img/work_1.png" alt="#">
-                            <div class="work__overlay"></div>
-                        </div>
-                        <div class="work__item">
-                            <img src="img/work_1.png" alt="#">
-                            <div class="work__overlay"></div>
-                        </div>
-                        <div class="work__item">
-                            <img src="img/work_1.png" alt="#">
-                            <div class="work__overlay"></div>
-                        </div>
-                        <div class="work__item">
-                            <img src="img/work_1.png" alt="#">
-                            <div class="work__overlay"></div>
-                        </div>
-                        <div class="work__item">
-                            <img src="img/work_1.png" alt="#">
-                            <div class="work__overlay"></div>
-                        </div>
-                        <div class="work__item">
-                            <img src="img/work_1.png" alt="#">
-                            <div class="work__overlay"></div>
-                        </div>
+                    <div class="work__gallery">
+                        <a href="img/work_1.jpg" class="work__item" data-fancybox="gallery"><img src = "img/work_preview_1.png" alt ="#"></a>
+                        <a href="img/work_1.jpg" class="work__item" data-fancybox="gallery"><img src = "img/work_preview_1.png" alt ="#"></a>
+                        <a href="img/work_1.jpg" class="work__item" data-fancybox="gallery"><img src = "img/work_preview_1.png" alt ="#"></a>
+                        <a href="img/work_1.jpg" class="work__item" data-fancybox="gallery"><img src = "img/work_preview_1.png" alt ="#"></a>
+                        <a href="img/work_1.jpg" class="work__item" data-fancybox="gallery"><img src = "img/work_preview_1.png" alt ="#"></a>
+                        <a href="img/work_1.jpg" class="work__item" data-fancybox="gallery"><img src = "img/work_preview_1.png" alt ="#"></a>
                     </div>
                 </div>
             </div>
@@ -212,6 +195,7 @@
     </div> -->
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
 </body>
