--- a/geostroy/index.html
+++ b/geostroy/index.html
@@ -538,10 +538,49 @@
                                 <span class="reviews__star"></span>
                                 <span class="reviews__star"></span>
                             </div>
-                            <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the
-                                Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
+                            <div class="reviews__text reviews__text_more">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since theLorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
                             <div class="reviews__bottom">
-                                <a href="#" class="reviews__readmore">Читать полностью</a>
+                                <div class="reviews__readmore">Читать полностью</div>
+                                <div class="reviews__date">23.06.2022</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="reviews__item">
+                            <div class="reviews__author">
+                                <div class="reviews__name">Анастасия Иванова</div>
+                                <div class="reviews__avatar"><img src="img/ava.jpg" alt="#"></div>
+                            </div>
+                            <div class="reviews__stars">
+                                <span class="reviews__star"></span>
+                                <span class="reviews__star"></span>
+                                <span class="reviews__star"></span>
+                                <span class="reviews__star"></span>
+                                <span class="reviews__star"></span>
+                            </div>
+                            <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since theLorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since since</div>
+                            <div class="reviews__bottom">
+                                <div class="reviews__readmore">Читать полностью</div>
+                                <div class="reviews__date">23.06.2022</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="reviews__item">
+                            <div class="reviews__author">
+                                <div class="reviews__name">Анастасия Иванова</div>
+                                <div class="reviews__avatar"><img src="img/ava.jpg" alt="#"></div>
+                            </div>
+                            <div class="reviews__stars">
+                                <span class="reviews__star"></span>
+                                <span class="reviews__star"></span>
+                                <span class="reviews__star"></span>
+                                <span class="reviews__star"></span>
+                                <span class="reviews__star"></span>
+                            </div>
+                            <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since theLorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
+                            <div class="reviews__bottom">
+                                <div class="reviews__readmore">Читать полностью</div>
                                 <div class="reviews__date">23.06.2022</div>
                             </div>
                         </div>
@@ -562,7 +601,7 @@
                             <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the
                                 Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
                             <div class="reviews__bottom">
-                                <a href="#" class="reviews__readmore">Читать полностью</a>
+                                <div class="reviews__readmore">Читать полностью</div>
                                 <div class="reviews__date">23.06.2022</div>
                             </div>
                         </div>
@@ -580,52 +619,9 @@
                                 <span class="reviews__star"></span>
                                 <span class="reviews__star"></span>
                             </div>
-                            <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the
-                                Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
+                            <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since theLorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
                             <div class="reviews__bottom">
-                                <a href="#" class="reviews__readmore">Читать полностью</a>
-                                <div class="reviews__date">23.06.2022</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="reviews__item">
-                            <div class="reviews__author">
-                                <div class="reviews__name">Анастасия Иванова</div>
-                                <div class="reviews__avatar"><img src="img/ava.jpg" alt="#"></div>
-                            </div>
-                            <div class="reviews__stars">
-                                <span class="reviews__star"></span>
-                                <span class="reviews__star"></span>
-                                <span class="reviews__star"></span>
-                                <span class="reviews__star"></span>
-                                <span class="reviews__star"></span>
-                            </div>
-                            <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the
-                                Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
-                            <div class="reviews__bottom">
-                                <a href="#" class="reviews__readmore">Читать полностью</a>
-                                <div class="reviews__date">23.06.2022</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="reviews__item">
-                            <div class="reviews__author">
-                                <div class="reviews__name">Анастасия Иванова</div>
-                                <div class="reviews__avatar"><img src="img/ava.jpg" alt="#"></div>
-                            </div>
-                            <div class="reviews__stars">
-                                <span class="reviews__star"></span>
-                                <span class="reviews__star"></span>
-                                <span class="reviews__star"></span>
-                                <span class="reviews__star"></span>
-                                <span class="reviews__star"></span>
-                            </div>
-                            <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the
-                                Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
-                            <div class="reviews__bottom">
-                                <a href="#" class="reviews__readmore">Читать полностью</a>
+                                <div class="reviews__readmore">Читать полностью</div>
                                 <div class="reviews__date">23.06.2022</div>
                             </div>
                         </div>
